* Destroying iron bars in Sokoban counts against its shortcut conduct.
* Drawbridge instant death removed: drawbridges can only be destroyed by force
  bolts when closed, not open.
* Prevent magic traps from being created above dungeon level 5.
* Fix the cosmetic issue of horizontally-flipped levels appearing slightly
  misaligned in the map area.

Items
-----
* More formal identification for item under certain circumstances:
    - Formal ID tin whistles and magic whistles when used.
    - Formal ID magic flutes and magic harps when used.
    - Formal ID enchant armor scrolls when they turn dragon scales into dragon
      scale mail.
* Guarantee a wand of cancellation in the Castle chest that can be used for
  blanking scrolls and potions.
* Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen
  monster and it hits a door."
* Fix wielding of a cockatrice corpse bare-handed while wearing chromatic dragon
  scales or scale mail not triggering petrification.
* Fix leaking of descriptions of prizes selected from level memory with far-look
  after the prize itself has vanished.
* Fix contents of containers created on special levels not being included in the
  initial container weight.

Monsters
--------
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Metallivores and disintegrators can eat through iron bars (from UnNetHack).
* Allow Demogorgon to be bribed, since his lair is now guaranteed.
* Tone back demon bribery amounts inherited from UnNetHack: demons now generally
  only ask for 2000 to 6000 gold for most characters and 2000 to 3000 for
  lawfuls (was 3000 to 20000!); giving within 10% less (rather than 40 gold
  less) still has a chance to satisfy them.
* Tone back 1-to-1 initial monster population difficulty inherited from
  NetHack4: it is now only like that for the first 10 levels, then 1-to-2 for